Xamarin.Forms MVVM tests added

--- a/dotNET/XAMARIN.FORMS-app/FoodParty/FoodParty/FoodParty.csproj
+++ b/dotNET/XAMARIN.FORMS-app/FoodParty/FoodParty/FoodParty.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.3.6" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.1.444934" />
   </ItemGroup>
+  
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DebugType>Full</DebugType>
+  </PropertyGroup>
 
   <ItemGroup>
     <Compile Condition=" '$(EnableDefaultCompileItems)' == 'true' " Update="App.xaml.cs">
